# FlappyEngine

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  buildres  codecov.yml  copyres  flappy  generate_all_tests.sh  gentarget  initproject  probuilder.py  run_all_test.sh  tools.py
core/: config.json
core/src/: AppManager.cpp  AppManager.h  AtlasRes.cpp  CameraComponent.cpp  CameraComponent.h  Component.h  DefaultResFactory.h  Entity.h  EntityManager.h  Entitymanager.cpp  EventSystem.cpp  Eventsystem.h  FileResFactory.cpp  InputManager.h  Manager.h  ManagerList.cpp  ManagerList.h  PresenterComponent.cpp  QuadRes.h  QuadResFactory.h  Res.h  ResManager.h  Scene.h  TextureRes.h  Tools.cpp  TransformComponent.cpp  View.cpp  View.h
core/tests/: TestScene.h  TestView.h  test_AtlasRes.cpp  test_CameraComponent.cpp  test_Color.cpp  test_Component.cpp  test_Entity.cpp  test_EntityManager.cpp  test_EventSystem.cpp  test_Manager.cpp  test_ManagerMist.cpp  test_QuadRes.cpp  test_ScreenManager.cpp  test_Sprite.cpp  test_Texture.cpp  test_Transform.cpp  test_View.cpp  test_ViewManager.cpp
doc/: Doxyfile  resource_classes.dia  resource_mgr.dia
doc/commands/: gentarget  init  prebuild
engine/: README.md
engine/flappy_conf/: general.json
modules/: compile_commands.json
modules/Core/: config.json
scripts/: help.py  tools.py
src/: FlappyEngine.pri
tests/: README.md  config.json  glviewfactoryqt.cpp  glviewfactoryqt.h
tests_core/: config.json  main.cpp  tests_core.pro
tests_gl/: config.json
(+1079 files in other folders)
